--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1241,6 +1241,7 @@ p {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-content: flex-start;
   width: 100%;
   overflow: auto;
   height: 100vh;
@@ -1282,6 +1283,26 @@ p {
   flex: 1 1 100%;
   display: flex;
   justify-content: flex-end;
+}
+.leader-board-section .team-card-labels div .add-team-section {
+  display: flex;
+  justify-content: flex-end;
+}
+.leader-board-section .team-card-labels div .add-team-button:hover {
+  cursor: pointer;
+  color: black;
+}
+.leader-board-section .team-card-labels div .add-team-button {
+  font-size: 35px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: baseline;
+  margin: 0;
+  padding: 0;
+  color: #3E98C7;
 }
 .leader-board-section button.btn-primary {
   background-color: white;
@@ -1331,38 +1352,18 @@ p {
   color: black;
   display: flex;
 }
-.leader-board-section .add-team-button:hover {
-  cursor: pointer;
-  color: black;
-}
-.leader-board-section .add-team-button {
-  font-size: 35px;
-  font-weight: 700;
-  letter-spacing: 2px;
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: flex-end;
-  align-items: baseline;
-  margin: 0;
-  padding: 0;
-  color: #3E98C7;
-}
 .leader-board-section .leaderboard-title {
+  background-color: limegreen;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 3%;
+  padding-top: 30px;
   font-family: "gopher", sans-serif;
   font-size: 55px;
   font-weight: 700;
   margin-left: 5vw;
   margin-right: 5vw;
   letter-spacing: 3px;
-  flex: 1;
-}
-.leader-board-section .add-team-section {
-  display: flex;
-  justify-content: flex-end;
 }
 div.card {
   border: none;
